<resources>
    <string name="app_name">Hakon\'s Reader</string>

    <string name="loggedIn">Logged in</string>

    <string name="navbarHome">Home</string>
    <string name="navbarSubreddit">Subreddit</string>
    <string name="navbarProfile">Profile</string>
    <string name="navbarSettings">Settings</string>

    <string name="btnLogIn">Log in</string>
    <string name="btnLogOut">Log out</string>

    <string name="numCommentsThousands">%.1fK comments</string>
    <plurals name="numComments">
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>

    <string name="scoreHidden">•</string>
    <string name="scoreThousands">%.1fK</string>

    <string name="subredditPrefixed">r/%s</string>
    <string name="authorPrefixed">u/%s</string>
    <string name="commentByPoster">u/%s (OP)</string>

    <string name="profileAge">User since %s</string>
    <string name="commentKarma">%d comment karma</string>
    <string name="postKarma">%d post karma</string>

    <string name="linkCopied">Link copied to clipboard</string>


    <!-- Post comments -->
    <plurals name="extraComments">
        <item quantity="one">%d more comment</item>
        <item quantity="other">%d more comments</item>
    </plurals>


    <!-- Preference groups -->
    <string name="prefs_group_theme">Theme</string>
    <string name="prefs_group_videos_images">Videos and images</string>

    <!-- Preference titles/names -->
    <string name="prefs_title_theme">Dark Mode</string>
    <string name="prefs_title_cache_nsfw">Cache NSFW videos/posts</string>
    <string name="prefs_title_auto_play_videos">Automatically play videos</string>
    <string name="prefs_title_auto_play_videos_always">Always</string>
    <string name="prefs_title_auto_play_videos_never">Never</string>
    <string name="prefs_title_auto_play_videos_wifi_only">Wi-Fi only</string>
    <string name="prefs_title_play_muted_videos">Start videos muted</string>
    <string name="prefs_title_play_muted_videos_fullscreen">Start videos muted in fullscreen</string>
    <string name="prefs_title_loop_videos">Loop videos</string>

    <!-- Preferences keys -->
    <string name="prefs_key_theme">theme</string>
    <string name="prefs_key_cache_nsfw">cache_nsfw</string>
    <string name="prefs_key_auto_play_videos">auto_play_videos</string>
    <string name="prefs_key_auto_play_videos_always">always</string>
    <string name="prefs_key_auto_play_videos_never">never</string>
    <string name="prefs_key_auto_play_videos_wifi_only">wifi_only</string>
    <string name="prefs_key_play_muted_videos">play_muted_videos</string>
    <string name="prefs_key_play_muted_videos_fullscreen">play_muted_videos_fullscreen</string>
    <string name="prefs_key_loop_videos">loop_videos</string>


    <plurals name="postAgeMinutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="postAgeHours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="postAgeDays">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <!-- Error messages -->
    <string name="genericServerError">Can\'t connect to Reddit servers</string>
    <string name="tooManyRequestsError">Too many request sent. Try again in a few seconds</string>
    <string name="errorLoggingIn">Error logging in</string>
    <string name="noInternetConnection">No internet connection</string>


    <string name="btnAddComment">Add comment</string>

    <string name="tagNSFW">NSFW</string>
    <string name="tagSpoiler">Spoiler</string>

    <string name="searchForSubreddit">Search for subreddit</string>

    <string name="transition_post_info">post_info</string>
    <string name="transition_post_content">post_content</string>
    <string name="transition_post_full_bar">post_full_bar</string>
</resources>